StorageModule now uses Resources.getResource() of Google Guava and thereby works